fix(search): broken layout after text field refactor

--- a/packages/elvis/src/components/form/search.scss
+++ b/packages/elvis/src/components/form/search.scss
@@ -16,14 +16,7 @@
       input:disabled,
       &.e-input---disabled input,
       &.e-input---loading input {
-        padding: 12px 48px 12px 56px;
-      }
-
-      &.e-input---invalid input,
-      &.e-input---focus input,
-      &.e-input---loading input:not(:focus),
-      input:focus {
-        padding: 11px 47px 11px 55px;
+        padding-inline: 57px 49px;
       }
     }
 
@@ -76,14 +69,7 @@
       input:disabled,
       &.e-input---loading input,
       &.e-input---disabled input {
-        padding: 12px 48px 12px 12px;
-      }
-
-      &.e-input---invalid input,
-      &.e-input---focus input,
-      &.e-input---loading input,
-      input:focus {
-        padding: 11px 47px 11px 11px;
+        padding-inline: 13px 49px;
       }
     }
 
@@ -132,14 +118,7 @@
         input:disabled,
         &.e-input---disabled input,
         &.e-input---loading input {
-          padding: 4px 32px;
-        }
-
-        &.e-input---invalid input,
-        &.e-input---focus input,
-        &.e-input---loading input,
-        input:focus {
-          padding: 3px 31px;
+          padding-inline: 33px;
         }
       }
 
@@ -169,14 +148,7 @@
         input:disabled,
         &.e-input---disabled input,
         &.e-input---loading input {
-          padding: 4px 32px 4px 10px;
-        }
-
-        &.e-input---invalid input,
-        &.e-input---focus input,
-        &.e-input---loading input,
-        input:focus {
-          padding: 3px 31px 3px 9px;
+          padding-inline: 11px 33px;
         }
       }
 
